--- a/firebase/functions/package.json
+++ b/firebase/functions/package.json
@@ -15,7 +15,10 @@
   "main": "lib/index.js",
   "dependencies": {
     "firebase-admin": "^9.2.0",
-    "firebase-functions": "^3.11.0"
+    "firebase-functions": "^3.11.0",
+    "got": "^11.8.2",
+    "stream": "^0.0.2",
+    "util": "^0.12.3"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^3.9.1",
