--- a/firebase/functions/package.json
+++ b/firebase/functions/package.json
@@ -2,6 +2,8 @@
   "name": "functions",
   "scripts": {
     "lint": "eslint --ext .js,.ts .",
+    "test": "mocha -r ts-node/register **/*.test.ts",
+    "coverage": "nyc -r lcov -e .ts -x \"*.test.ts\" npm run test",
     "build": "tsc",
     "serve": "npm run build && firebase emulators:start --only functions",
     "shell": "npm run build && firebase functions:shell",
@@ -21,12 +23,19 @@
     "util": "^0.12.3"
   },
   "devDependencies": {
+    "@types/chai": "^4.2.18",
+    "@types/got": "^9.6.11",
+    "@types/mocha": "^8.2.2",
     "@typescript-eslint/eslint-plugin": "^3.9.1",
     "@typescript-eslint/parser": "^3.8.0",
+    "chai": "^4.3.4",
     "eslint": "^7.6.0",
     "eslint-config-google": "^0.14.0",
     "eslint-plugin-import": "^2.22.0",
     "firebase-functions-test": "^0.2.0",
+    "mocha": "^8.4.0",
+    "nyc": "^15.1.0",
+    "ts-node": "^9.1.1",
     "typescript": "^3.8.0"
   },
   "private": true
