--- a/firebase/functions/package.json
+++ b/firebase/functions/package.json
@@ -20,12 +20,14 @@
     "firebase-functions": "^3.11.0",
     "got": "^11.8.2",
     "stream": "^0.0.2",
-    "util": "^0.12.3"
+    "util": "^0.12.3",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/chai": "^4.2.18",
     "@types/got": "^9.6.11",
     "@types/mocha": "^8.2.2",
+    "@types/uuid": "^8.3.0",
     "@typescript-eslint/eslint-plugin": "^3.9.1",
     "@typescript-eslint/parser": "^3.8.0",
     "chai": "^4.3.4",
